@@ -1,16 +1,16 @@
 import unittest
 
-from test.support import run_unittest, import_module
+from test.support import import_module
 
 # Skip tests if _ctypes module was not built.
 import_module('_ctypes')
 
 import ctypes.test
 
-def test_main():
+def load_tests(*args):
     skipped, testcases = ctypes.test.get_tests(ctypes.test, "test_*.py", verbosity=0)
     suites = [unittest.makeSuite(t) for t in testcases]
-    run_unittest(unittest.TestSuite(suites))
+    return unittest.TestSuite(suites)
 
 if __name__ == "__main__":
-    test_main()
+    unittest.main()
